Fix spacing for card element and create line separator

--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
   background-color: #fafafa;
   width: 100%;
 }
+
 .navbar {
   /* max-width: 1400px; */
   min-height: 95px;
@@ -67,7 +68,7 @@ body {
   line-height: normal;
   letter-spacing: normal;
   color: #121212;
-  padding: 5px;
+  margin-bottom: 4px;
 }
 
 .title {
@@ -120,10 +121,14 @@ body {
   height: 24px;
   border: solid 1px #e8e8e8;
 }
+
 .Line-3 {
   width: 2px;
   height: 70px;
   border: solid 1px #e8e8e8;
+  position: absolute;
+  right: 325px;
+  top: 40px;
 }
 
 .Oval-2 {
@@ -198,6 +203,7 @@ body {
   letter-spacing: 0.5px;
   text-align: center;
 }
+
 .btn-primary {
   color: #ffffff;
   background-color: #0290ff;
@@ -220,4 +226,12 @@ body {
 
 .percentage {
   margin-top: 25px;
+}
+
+.card {
+  margin: 15px 0;
+}
+
+.card-body {
+  padding: 2rem 3rem .75rem 1.5rem;
 }
